Add jpms